# DT-for-WDN-leak-localization

./: .flake8  .gitattributes  .gitignore  LICENSE.txt  README.md  generate_epanet_data.py  main.py  preprocess_data.py  process_data.py  pyproject.toml  requirements.txt  solve_classifier.py  solve_inverse_problem.py  train_AE.py  train_GAN.py  train_classifier.py  visualise_data.py  visualize_results.py
.github/workflows/: CI.yml
EPANET_input_files/: net_1.inp  net_2.inp  net_3.inp  net_3_old.inp
conf/net_1/: AE_config.yml  GAN.yml  GMM_AE_config.yml  SupAE_config.yml  Supervised_WAE.yml  UnsupAE_config.yml  config.yml  data_preprocessing.yml  dense_Supervised_WAE.yml  dense_classifier.yml  diffusion_config.yml  inverse_problem.yml
conf/net_2/: Supervised_WAE.yml  config.yml  data_preprocessing.yml  dense_Supervised_WAE.yml  dense_classifier.yml  inverse_problem.yml
conf/net_3/: Supervised_WAE.yml  data_preprocessing.yml  inverse_problem.yml
conf/net_4/: Supervised_WAE.yml  data_preprocessing.yml  dense_Supervised_WAE.yml  dense_classifier.yml  inverse_problem.yml
results/net_1/: accuracy_noise_0.005_sensors_3.npy  accuracy_noise_0.005_sensors_3_prior.npy  accuracy_noise_0.005_sensors_5.npy  accuracy_noise_0.005_sensors_5_prior.npy  accuracy_noise_0.005_sensors_7.npy  accuracy_noise_0.005_sensors_7_prior.npy  accuracy_noise_0.01_sensors_3.npy  accuracy_noise_0.01_sensors_3_prior.npy  accuracy_noise_0.01_sensors_5.npy  (+81 more)
tests/: test_main.py
trained_preprocessors/: net_1_preprocessor.pkl  net_2_preprocessor.pkl  net_3_preprocessor.pkl  net_4_preprocessor.pkl
(+483 files in other folders)
